bug fixes 	change onClick to onChange

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,52 @@
+body {
+  margin: 0 auto;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .label {
   display: block;
 }
 
-input {
+input,
+select,
+button {
   width: 100%;
+  padding:6px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.v-center {
+  justify-content: center;
+}
+
+.h-center {
+  align-items: center;
+}
+
+.pa-16 {
+  padding: 16px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.btn-success {
+  background-color: green;
+  color: white;
+}
+
+.btn-secondary {
+  background-color: grey;
+  color: white;
+}
+
+.w-50 {
+  width: 50%;
 }
